[tool.poetry]
name = "mini-set"
version = "0.0.0"
description = "A Jinja2 template processor for interacting with an SQL engine"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ninoseki/miniset"
repository = "https://github.com/ninoseki/miniset"
documentation = "https://ninoseki.github.io/miniset/"
packages = [{ include = "miniset" }]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = ">=3.1,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
mypy = "^1.5"
pre-commit = "^3.3"
pytest = "^7.4"
pytest-pretty = "^1.2"
pytest-randomly = "^3.13"
sqlmodel = "^0.0"
urllib3 = "^1.26"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5"
mkdocs-material = "^9.1"
mkdocstrings = { extras = ["python"], version = "^0.22" }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "T20", # flake8-print
]
ignore = [
    "E501", # line too long, handled by black
]
