[tool.poetry]
name = "mini-set"
version = "0.0.0"
description = "A Jinja2 template processor for interacting with an SQL engine"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ninoseki/miniset"
repository = "https://github.com/ninoseki/miniset"
documentation = "https://ninoseki.github.io/miniset/"
packages = [{ include = "miniset" }]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = ">=3.1.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-pretty = "^1.2"
pytest-randomly = "^3.15"
sqlmodel = "^0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocstrings = { extras = ["python"], version = "^0.25.1" }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line too long, handled by black
]
